--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "COMPAS itself did not have open database. But it does have a [technical document]( http://www.northpointeinc.com/files/technical_documents/FieldGuide2_081412.pdf) for how to inteprete COMPAS scores. \n",
     "\n",
-    "As for COMPAS score and crime data, we are drawing from a [open sourced project on github done by Propublica](https://github.com/propublica/compas-analysis). We believe comparing to its data, there are no better alternative. Since COMPAS is black box and commercial, it is challenging for us to directly request data from it. We also looked into other researches on COMPAS, but they gave way to Propublica either because of smaller data set or less complete inmate profile. \n",
+    "As for COMPAS score and crime data, we are drawing from a [open sourced project on github done by Propublica](https://github.com/propublica/compas-analysis). We believe comparing to its data, there is no better alternative. Since COMPAS is black box and commercial, it is challenging for us to directly request data from it. We also looked into other researches on COMPAS, but they gave way to Propublica either because of smaller data set or less complete inmate profile. \n",
     "\n",
     "Propublica has three main csvs to store data: compas-scores-raw.csv, compas-scores-two-years.csv and compas-scores-two-years-violent.csv. "
    ]
@@ -59,9 +59,9 @@
     "\n",
     "#### Please find a summary of our research into [how Propublic collected its data](https://www.propublica.org/article/how-we-analyzed-the-compas-recidivism-algorithm) as follows. \n",
     "\n",
-    "Propublica's data is of [Broward County](https://en.wikipedia.org/wiki/Broward_County,_Florida) in Florida, which  primarily uses the score to determine whether to release or detain a defendant before his or her trial. Propublica acquires COMPAS scores by a open request to COMPAS. As for profiles of inmates, Probubica accessed through [Broward County Clerk’s Office](https://www.clerk-17th-flcourts.org/Web2/CaseSearch/Results)\n",
+    "Propublica's data is of [Broward County](https://en.wikipedia.org/wiki/Broward_County,_Florida) in Florida, which  primarily uses COMPAS score to determine whether to release or detain a defendant before his or her trial. Propublica acquires COMPAS scores by a open request to COMPAS. As for profiles of inmates, Probubica accessed through [Broward County Clerk’s Office](https://www.clerk-17th-flcourts.org/Web2/CaseSearch/Results)\n",
     "\n",
-    "By doing research into that, we can be more confident that our research will not touch on citizens' privaccy. "
+    "By researching into that, we become more confident that our research will not touch on citizens' privacy. "
    ]
   },
   {
@@ -120,224 +120,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compas_raw = pd.read_csv('data/compas-scores-raw.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Person_ID</th>\n",
-       "      <th>AssessmentID</th>\n",
-       "      <th>Case_ID</th>\n",
-       "      <th>Agency_Text</th>\n",
-       "      <th>LastName</th>\n",
-       "      <th>FirstName</th>\n",
-       "      <th>MiddleName</th>\n",
-       "      <th>Sex_Code_Text</th>\n",
-       "      <th>Ethnic_Code_Text</th>\n",
-       "      <th>DateOfBirth</th>\n",
-       "      <th>...</th>\n",
-       "      <th>RecSupervisionLevel</th>\n",
-       "      <th>RecSupervisionLevelText</th>\n",
-       "      <th>Scale_ID</th>\n",
-       "      <th>DisplayText</th>\n",
-       "      <th>RawScore</th>\n",
-       "      <th>DecileScore</th>\n",
-       "      <th>ScoreText</th>\n",
-       "      <th>AssessmentType</th>\n",
-       "      <th>IsCompleted</th>\n",
-       "      <th>IsDeleted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50844</td>\n",
-       "      <td>57167</td>\n",
-       "      <td>51950</td>\n",
-       "      <td>PRETRIAL</td>\n",
-       "      <td>Fisher</td>\n",
-       "      <td>Kevin</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>12/05/92</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Risk of Violence</td>\n",
-       "      <td>-2.08</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>New</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50844</td>\n",
-       "      <td>57167</td>\n",
-       "      <td>51950</td>\n",
-       "      <td>PRETRIAL</td>\n",
-       "      <td>Fisher</td>\n",
-       "      <td>Kevin</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>12/05/92</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Risk of Recidivism</td>\n",
-       "      <td>-1.06</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>New</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>50844</td>\n",
-       "      <td>57167</td>\n",
-       "      <td>51950</td>\n",
-       "      <td>PRETRIAL</td>\n",
-       "      <td>Fisher</td>\n",
-       "      <td>Kevin</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>12/05/92</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Risk of Failure to Appear</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>New</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>50848</td>\n",
-       "      <td>57174</td>\n",
-       "      <td>51956</td>\n",
-       "      <td>PRETRIAL</td>\n",
-       "      <td>KENDALL</td>\n",
-       "      <td>KEVIN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>09/16/84</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Risk of Violence</td>\n",
-       "      <td>-2.84</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>New</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>50848</td>\n",
-       "      <td>57174</td>\n",
-       "      <td>51956</td>\n",
-       "      <td>PRETRIAL</td>\n",
-       "      <td>KENDALL</td>\n",
-       "      <td>KEVIN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>09/16/84</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Risk of Recidivism</td>\n",
-       "      <td>-1.50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>New</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Person_ID  AssessmentID  Case_ID Agency_Text LastName FirstName MiddleName  \\\n",
-       "0      50844         57167    51950    PRETRIAL   Fisher     Kevin        NaN   \n",
-       "1      50844         57167    51950    PRETRIAL   Fisher     Kevin        NaN   \n",
-       "2      50844         57167    51950    PRETRIAL   Fisher     Kevin        NaN   \n",
-       "3      50848         57174    51956    PRETRIAL  KENDALL     KEVIN        NaN   \n",
-       "4      50848         57174    51956    PRETRIAL  KENDALL     KEVIN        NaN   \n",
-       "\n",
-       "  Sex_Code_Text Ethnic_Code_Text DateOfBirth    ...     RecSupervisionLevel  \\\n",
-       "0          Male        Caucasian    12/05/92    ...                       1   \n",
-       "1          Male        Caucasian    12/05/92    ...                       1   \n",
-       "2          Male        Caucasian    12/05/92    ...                       1   \n",
-       "3          Male        Caucasian    09/16/84    ...                       1   \n",
-       "4          Male        Caucasian    09/16/84    ...                       1   \n",
-       "\n",
-       "  RecSupervisionLevelText Scale_ID                DisplayText RawScore  \\\n",
-       "0                     Low        7           Risk of Violence    -2.08   \n",
-       "1                     Low        8         Risk of Recidivism    -1.06   \n",
-       "2                     Low       18  Risk of Failure to Appear    15.00   \n",
-       "3                     Low        7           Risk of Violence    -2.84   \n",
-       "4                     Low        8         Risk of Recidivism    -1.50   \n",
-       "\n",
-       "  DecileScore ScoreText AssessmentType  IsCompleted IsDeleted  \n",
-       "0           4       Low            New            1         0  \n",
-       "1           2       Low            New            1         0  \n",
-       "2           1       Low            New            1         0  \n",
-       "3           2       Low            New            1         0  \n",
-       "4           1       Low            New            1         0  \n",
-       "\n",
-       "[5 rows x 28 columns]"
+       "(60843, 28)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compas_raw = pd.read_csv('data/compas-scores-raw.csv')\n",
-    "compas_raw.head()"
+    "compas_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 60843 cases in compas_raw. As for compas_scores_two_years.csv and compas_scores_two_years_violent.csv, there are respectively 7214 and 4743 cases. From 60483 cases in compas_raw, researchers at Propublica cleaned the data, only kept data of people who were assessed at the pretrial stage, discarding those that were assessed at parole, probation and other stages in criminal justice system. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -2743,27 +2562,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60843, 28)"
+       "Index(['Person_ID', 'AssessmentID', 'Case_ID', 'Agency_Text', 'LastName',\n",
+       "       'FirstName', 'MiddleName', 'Sex_Code_Text', 'Ethnic_Code_Text',\n",
+       "       'DateOfBirth', 'ScaleSet_ID', 'ScaleSet', 'AssessmentReason',\n",
+       "       'Language', 'LegalStatus', 'CustodyStatus', 'MaritalStatus',\n",
+       "       'Screening_Date', 'RecSupervisionLevel', 'RecSupervisionLevelText',\n",
+       "       'Scale_ID', 'DisplayText', 'RawScore', 'DecileScore', 'ScoreText',\n",
+       "       'AssessmentType', 'IsCompleted', 'IsDeleted'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "compas_raw.shape"
+    "compas_raw.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Features\n",
+    "\n",
+    "\"Agency_Text\" describes the context where people was assessed by COMPAS. \n",
+    "\n",
+    "\"LastName\" and \"FirstName\" are name infos. \n",
+    "\n",
+    "\"Sex_Code_Text\" gives gender infos.\n",
+    "\n",
+    "\"Ethnic_Code_Text\" gives racial infos. \n",
+    "\n",
+    "\"DateOfBirth\" gives age infos. \n",
+    "\n",
+    "\"AssessmentReason\" are all \"intake\".\n",
+    "\n",
+    "\"Language\" are either English or Spanish.\n",
+    "\n",
+    "\"MaritalStatus\" describes marital status. \n",
+    "\n",
+    "\"DecileScore\" are in a scale of 1 to 10 and \"ScoreText\" gives a category based on DecileScore. \n",
+    "\n",
+    "While past researches questioning fairness of COMPAS scores focus on racial factor, we want to investigate into other factors such as sex, age, language, marital status, past_crimes, etc. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2665,7 @@
        "1          Male  47514"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
