use single race factor

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -5849,34 +5849,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = compas_two_year.loc[:,['sex','age_cat','race','priors_count.1','c_charge_degree']]\n",
     "X = pd.get_dummies(X)\n",
-    "y = compas_two_year['decile_score.1']\n",
-    "\n",
-    "# set the random seed\n",
-    "np.random.seed(100)\n",
-    "\n",
-    "# split the data: all data -> 0.8 train, 0.2 test\n",
-    "# train_test_split returns 4 values: X_train, X_test, y_train, y_test\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
-    "                                                    train_size=0.80, test_size=0.20)\n",
-    "\n",
-    "# split the data: train -> 0.75 train, 0.25 validate\n",
-    "# Returns 4 values: X_train, X_validate, y_train, y_validate\n",
-    "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train,\n",
-    "                                                    train_size=0.75, test_size=0.25)"
+    "y = compas_two_year['decile_score.1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 117,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5888,7 +5875,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.406\n",
       "Method:                 Least Squares   F-statistic:                     493.5\n",
       "Date:                Thu, 25 Apr 2019   Prob (F-statistic):               0.00\n",
-      "Time:                        21:38:34   Log-Likelihood:                -15925.\n",
+      "Time:                        23:07:31   Log-Likelihood:                -15925.\n",
       "No. Observations:                7214   AIC:                         3.187e+04\n",
       "Df Residuals:                    7203   BIC:                         3.195e+04\n",
       "Df Model:                          10                                         \n",
@@ -5940,36 +5927,221 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "model = sm.Logit(y, X)\n",
-    " \n",
-    "result = model.fit()"
+    "#### use only age_cat and prior_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 129,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_age_prev = compas_two_year.loc[:,['age_cat','priors_count.1']]\n",
+    "X_age_prev = pd.get_dummies(X_age_prev)\n",
+    "y_age_prev= compas_two_year['decile_score.1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "endog must be in the unit interval.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-96-3ed2cb6d2f4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mLogit_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLogit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint_logit_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprint_logit_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/statsmodels/discrete/discrete_model.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, endog, exog, **kwargs)\u001b[0m\n\u001b[1;32m    419\u001b[0m         if (not issubclass(self.__class__, MultinomialModel) and\n\u001b[1;32m    420\u001b[0m                 not np.all((self.endog >= 0) & (self.endog <= 1))):\n\u001b[0;32m--> 421\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"endog must be in the unit interval.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    422\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    423\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: endog must be in the unit interval."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:         decile_score.1   R-squared:                       0.377\n",
+      "Model:                            OLS   Adj. R-squared:                  0.376\n",
+      "Method:                 Least Squares   F-statistic:                     1451.\n",
+      "Date:                Thu, 25 Apr 2019   Prob (F-statistic):               0.00\n",
+      "Time:                        23:16:45   Log-Likelihood:                -16103.\n",
+      "No. Observations:                7214   AIC:                         3.221e+04\n",
+      "Df Residuals:                    7210   BIC:                         3.224e+04\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "const                       2.6262      0.026    101.731      0.000       2.576       2.677\n",
+      "priors_count.1              0.3039      0.006     54.543      0.000       0.293       0.315\n",
+      "age_cat_25 - 45             0.7772      0.034     22.630      0.000       0.710       0.845\n",
+      "age_cat_Greater than 45    -0.9915      0.047    -21.119      0.000      -1.084      -0.900\n",
+      "age_cat_Less than 25        2.8406      0.047     60.847      0.000       2.749       2.932\n",
+      "==============================================================================\n",
+      "Omnibus:                      316.527   Durbin-Watson:                   2.008\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              356.223\n",
+      "Skew:                           0.539   Prob(JB):                     4.44e-78\n",
+      "Kurtosis:                       2.847   Cond. No.                     4.59e+16\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 1.25e-28. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
      ]
     }
    ],
    "source": [
-    "Logit_model = sm.Logit(y, X)\n",
-    "predictions = model.fit()\n",
+    "X_age_prev = sm.add_constant(X_age_prev) # adding a constant\n",
     "\n",
-    "print_logit_model = model.summary()\n",
-    "print(print_logit_model)"
+    "model_age_prev = sm.OLS(y_age_prev, X_age_prev).fit()\n",
+    "predictions = model_age_prev.predict(X_age_prev) \n",
+    "\n",
+    "print_model_age_prev = model_age_prev.summary()\n",
+    "print(print_model_age_prev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### only use race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_race = compas_two_year.loc[:,['race']]\n",
+    "X_race = pd.get_dummies(X_race)\n",
+    "y_race = compas_two_year['decile_score.1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:         decile_score.1   R-squared:                       0.101\n",
+      "Model:                            OLS   Adj. R-squared:                  0.100\n",
+      "Method:                 Least Squares   F-statistic:                     162.0\n",
+      "Date:                Thu, 25 Apr 2019   Prob (F-statistic):          1.18e-163\n",
+      "Time:                        23:16:36   Log-Likelihood:                -17423.\n",
+      "No. Observations:                7214   AIC:                         3.486e+04\n",
+      "Df Residuals:                    7208   BIC:                         3.490e+04\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "const                     3.5173      0.117     30.009      0.000       3.287       3.747\n",
+      "race_African-American     1.8515      0.123     15.040      0.000       1.610       2.093\n",
+      "race_Asian               -0.5798      0.421     -1.376      0.169      -1.406       0.246\n",
+      "race_Caucasian            0.2179      0.126      1.729      0.084      -0.029       0.465\n",
+      "race_Hispanic            -0.0541      0.148     -0.365      0.715      -0.345       0.236\n",
+      "race_Native American      2.6494      0.552      4.797      0.000       1.567       3.732\n",
+      "race_Other               -0.5677      0.166     -3.414      0.001      -0.894      -0.242\n",
+      "==============================================================================\n",
+      "Omnibus:                      905.491   Durbin-Watson:                   1.997\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              359.095\n",
+      "Skew:                           0.344   Prob(JB):                     1.06e-78\n",
+      "Kurtosis:                       2.151   Cond. No.                     3.46e+15\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 8.49e-28. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_race = sm.add_constant(X_race) # adding a constant\n",
+    "\n",
+    "model_race = sm.OLS(y_race, X_race).fit()\n",
+    "predictions = model_race.predict(X_race) \n",
+    "\n",
+    "print_model_race = model_race.summary()\n",
+    "print(print_model_race)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### instead of compas score, predict two year recidivism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_race_recid = compas_two_year.loc[:,['race']]\n",
+    "X_race_recid = pd.get_dummies(X_race_recid)\n",
+    "y_race_recid = compas_two_year['two_year_recid']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:         two_year_recid   R-squared:                       0.018\n",
+      "Model:                            OLS   Adj. R-squared:                  0.017\n",
+      "Method:                 Least Squares   F-statistic:                     26.68\n",
+      "Date:                Thu, 25 Apr 2019   Prob (F-statistic):           8.05e-27\n",
+      "Time:                        23:16:12   Log-Likelihood:                -5134.4\n",
+      "No. Observations:                7214   AIC:                         1.028e+04\n",
+      "Df Residuals:                    7208   BIC:                         1.032e+04\n",
+      "Df Model:                           5                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "race_African-American     0.5143      0.008     63.398      0.000       0.498       0.530\n",
+      "race_Asian                0.2812      0.087      3.226      0.001       0.110       0.452\n",
+      "race_Caucasian            0.3936      0.010     39.536      0.000       0.374       0.413\n",
+      "race_Hispanic             0.3642      0.020     18.637      0.000       0.326       0.403\n",
+      "race_Native American      0.5556      0.116      4.779      0.000       0.328       0.783\n",
+      "race_Other                0.3528      0.025     13.888      0.000       0.303       0.403\n",
+      "==============================================================================\n",
+      "Omnibus:                       43.557   Durbin-Watson:                   2.018\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1116.774\n",
+      "Skew:                           0.192   Prob(JB):                    3.13e-243\n",
+      "Kurtosis:                       1.111   Cond. No.                         14.3\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_race = sm.add_constant(X_race_recid) # adding a constant\n",
+    "\n",
+    "model_race_recid = sm.OLS(y_race_recid, X_race_recid).fit()\n",
+    "predictions = model_race_recid.predict(X_race_recid) \n",
+    "\n",
+    "print_model_race_recid = model_race_recid.summary()\n",
+    "print(print_model_race_recid)"
    ]
   },
   {
